trunk/Archive2/6d/95499fa7f4e90c/output
main.cpp: In function 'typename T::pos_type stream_size(const T&)':
main.cpp:9:65: error: 'ios_base' has not been declared
  const typename T::pos_type size = buf->pubseekoff(0, strm.end, ios_base::out);
                                                                 ^
